# ExamCraft

./: .env.example  .gitignore  DEPLOYMENT.md  Makefile  README.md  fly.toml
.github/workflows/: claude.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  auth.py  cli.py  config.py  db.py  jobs.py  main.py  models.py  seed.py  serialize.py  sse.py
backend/app/api/: auth.py  banks.py  chat.py  generations.py  samples.py
backend/app/services/: docrender.py  docx_export.py  generation.py  image_gen.py  ingestion.py  llm.py  revision.py
backend/tests/: conftest.py  test_auth.py  test_banks.py  test_health.py
web/: .env.local.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/(app)/: layout.tsx  page.tsx
web/app/(app)/banks/[id]/: page.tsx
web/app/(app)/generations/[id]/: page.tsx
web/app/login/: page.tsx
web/components/: AnalysisPanel.tsx  CreateBankCard.tsx  ExamView.tsx  GenerateButton.tsx  GenerationWatch.tsx  GenerationsList.tsx  I18nProvider.tsx  LocaleToggle.tsx  MathText.tsx  PageGallery.tsx  ReviseChat.tsx  SampleList.tsx  SampleUploader.tsx  SignOutButton.tsx  SpecViewer.tsx
web/lib/: api.ts  client.ts  format.ts  server.ts
web/lib/i18n/: index.ts  server.ts
web/lib/i18n/messages/: en.ts  zh.ts
