[project]
name = "examcraft"
version = "0.1.0"
description = "Personal local web app that turns sample exam papers into AI-generated practice exams."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20",
    "python-multipart>=0.0.18",
    "litellm>=1.55",
    "pdf2image>=1.17",
    "Pillow>=11",
    "httpx>=0.28",
    "itsdangerous>=2.2",
    "python-dotenv>=1.0",
    "anyio>=4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.7",
]

[project.scripts]
examcraft-server = "app.cli:run"
examcraft-seed = "app.seed:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]
